--- a/friends.html
+++ b/friends.html
@@ -62,7 +62,7 @@
         <div class="user-component friends-list">
           <div class="user-component__column">
             <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmis8ZAc4BUvPz8cW1BWf7txqOyBZB5r4q8A&usqp=CAU/?imw=268&imh=268&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true"
+              src="https://user-images.githubusercontent.com/110315378/197384602-b4f1dbe2-5b71-4985-8052-796cf0160184.jpg"
               class="user-component__avatar user-component__avatar__sm"
             />
             <div class="user-component__text">
@@ -79,7 +79,7 @@
         <div class="user-component friends-list">
           <div class="user-component__column">
             <img
-              src="https://i1.ruliweb.com/img/21/04/04/1789b37ed37f78d.jpeg"
+              src="https://user-images.githubusercontent.com/110315378/197384724-7d23b5f7-35ca-42d7-ba57-f7c1a92aa529.jpg"
               class="user-component__avatar user-component__avatar__sm"
             />
             <div class="user-component__text">
@@ -92,7 +92,7 @@
       <div class="user-component friends-list">
         <div class="user-component__column">
           <img
-            src="https://i3.ruliweb.com/img/21/04/04/1789b37ee70f78d.jpeg"
+            src="https://user-images.githubusercontent.com/110315378/197384694-1090b6d8-b68c-488c-ac5d-482e3ce1cff6.jpg"
             class="user-component__avatar user-component__avatar__sm"
           />
           <div class="user-component__text">
