--- a/friends.html
+++ b/friends.html
@@ -110,7 +110,7 @@
       <div class="user-component friends-list">
         <div class="user-component__column">
           <img
-            src="https://ac-p.namu.la/20211002s1/a2ea91bcfc647a3e02aab45115023141f9c36b22c2d3726564b1072b3c371e06.jpg"
+            src="https://user-images.githubusercontent.com/110315378/197385003-6b7d0ecc-e831-448e-8b18-460cf4528ed7.jpg"
             class="user-component__avatar user-component__avatar__sm"
           />
           <div class="user-component__text">
