--- a/find.html
+++ b/find.html
@@ -70,7 +70,7 @@
           <h6 class="open-post__hashtags">#muscle#musclemania</h6>
           <div class="open-post__members">
             <img
-              src="https://ac-p.namu.la/20211002s1/a2ea91bcfc647a3e02aab45115023141f9c36b22c2d3726564b1072b3c371e06.jpg?region=0,0,600,600"
+              src="https://user-images.githubusercontent.com/110315378/197385345-5435174c-1108-4c86-a364-e7919a9b5ea1.jpg?region=0,0,600,600"
             />
             <span class="open-post__member-count">999+ members</span>
             <div class="divider"></div>
