--- a/more.html
+++ b/more.html
@@ -37,7 +37,7 @@
       <div class="user-component user-component__more">
         <div class="user-component__column">
           <img
-            src="https://scontent-ssn1-1.xx.fbcdn.net/v/t39.30808-6/220381796_3825054417595183_3377827291764252219_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=973b4a&_nc_ohc=Q0cxD4CgvNsAX9Af0oK&_nc_ht=scontent-ssn1-1.xx&oh=00_AT8o8iMS7-NMyqfMhIo2qeU-pkVNTpDaAPJOB-qDr9eOYA&oe=6332B373"
+            src="https://user-images.githubusercontent.com/110315378/197384602-b4f1dbe2-5b71-4985-8052-796cf0160184.jpg"
             class="user-component__avatar user-component__avatar__xl"
           />
           <div class="user-component__text">
