--- a/more.html
+++ b/more.html
@@ -92,7 +92,7 @@
           <div class="more-suggestions__icon">
             <div class="more-suggestions__icon-image">
               <img
-                src="https://mblogthumb-phinf.pstatic.net/MjAxOTEwMjNfMjgz/MDAxNTcxODI5OTA5NzY0.KGeurW5TgjwxApCZGlETGo2iyiuoRz4YxLiuO7YtG9gg.ohSu1z7Kv79j5uhTTcrgbKGwKDTThwtr8aANxdQKxzQg.JPEG.mmsus2392/%ED%94%84%EB%A1%9C%ED%8B%B4%EA%B8%B0%ED%94%84%ED%8A%B8_%EB%8B%A8%EB%B0%B1%EC%A7%88%EC%9D%8C%EB%A3%8C_(15).JPG?type=w800"
+                src="https://user-images.githubusercontent.com/110315378/197385616-8fb59f91-8d37-4205-be28-378af998e642.jpg"
               />
             </div>
             <span class="more-suggestions__icon-text">Protein Juice</span>
@@ -100,7 +100,7 @@
           <div class="more-suggestions__icon">
             <div class="more-suggestions__icon-image">
               <img
-                src="https://t1.daumcdn.net/cfile/tistory/235DEF445599F0F12E"
+                src="https://user-images.githubusercontent.com/110315378/197385626-b7bf0b41-4fd7-40a1-9e5a-c3db2789161e.jpg"
               />
             </div>
             <span class="more-suggestions__icon-text">Weight!Weight!</span>
@@ -108,7 +108,7 @@
           <div class="more-suggestions__icon">
             <div class="more-suggestions__icon-image">
               <img
-                src="https://yt3.ggpht.com/ytc/AMLnZu9yrQgoV1uPOe1GW69ZqFrEOLAMP7LtAtUVKoWB=s900-c-k-c0x00ffffff-no-rj"
+                src="https://user-images.githubusercontent.com/110315378/197385622-a68821b2-79ba-4d86-9682-842aff879ab8.jpg"
               />
             </div>
             <span class="more-suggestions__icon-text">Labour Songs</span>
