--- a/friends.html
+++ b/friends.html
@@ -153,7 +153,7 @@
       </ul>
     </nav>
     <div id="splash-screen">
-      <img src="https://ae01.alicdn.com/kf/S3bbaaff754cb4bff8cc13bce97a1faefk/Gk.jpg_Q90.jpg_.webp"/>
+      <img src="https://user-images.githubusercontent.com/110315378/197385809-e7bca911-80b7-445c-adbe-972d2ccb3fdf.jpg"/>
     </div>
 
     <div id="no-mobile">
