--- a/find.html
+++ b/find.html
@@ -70,7 +70,7 @@
           <h6 class="open-post__hashtags">#muscle#musclemania</h6>
           <div class="open-post__members">
             <img
-              src="https://user-images.githubusercontent.com/110315378/197385345-5435174c-1108-4c86-a364-e7919a9b5ea1.jpg?region=0,0,600,600"
+              src="https://github.com/Springrootz/springrootz.github.io/issues/6#issue-1419727875?region=0,0,600,600"
             />
             <span class="open-post__member-count">999+ members</span>
             <div class="divider"></div>
