--- a/find.html
+++ b/find.html
@@ -70,7 +70,7 @@
           <h6 class="open-post__hashtags">#muscle#musclemania</h6>
           <div class="open-post__members">
             <img
-              src="https://github.com/Springrootz/springrootz.github.io/issues/6#issue-1419727875?region=0,0,600,600"
+              src="https://user-images.githubusercontent.com/110315378/197385345-5435174c-1108-4c86-a364-e7919a9b5ea1.jpg?region=0,0,600,600"
             />
             <span class="open-post__member-count">999+ members</span>
             <div class="divider"></div>
@@ -80,7 +80,7 @@
         <div class="open-post__column">
           <div class="open-post__photo">
             <img
-              src="https://github.com/Springrootz/springrootz.github.io/issues/6#issue-1419727875?stp=dst-png_s320x320&_nc_cat=100&ccb=1-7&_nc_sid=8024bb&_nc_ohc=-noCSeiW0uoAX84-Tto&_nc_ht=scontent-ssn1-1.xx&oh=00_AT-AvGmAw6Jza3rNzmY3it56e7Rxlt1nM9t0uGZpreizNA&oe=6355DE29"
+              src="https://user-images.githubusercontent.com/110315378/197385345-5435174c-1108-4c86-a364-e7919a9b5ea1.jpg?stp=dst-png_s320x320&_nc_cat=100&ccb=1-7&_nc_sid=8024bb&_nc_ohc=-noCSeiW0uoAX84-Tto&_nc_ht=scontent-ssn1-1.xx&oh=00_AT-AvGmAw6Jza3rNzmY3it56e7Rxlt1nM9t0uGZpreizNA&oe=6355DE29"
             />
             <div class="open-post__heart-count">
               <i class="fas fa-heart fa-xs"></i><span>999</span>
